# Python-projects

./: .doctor.py.un~  .gitignore  1D_List.py  Digital_zero.py  Password_genarator.py  Question_paper_for_daisy.py  README.md  Test_random_function.py  Untitled-1.py  Visual_picture.py  add_with_five.py  canvas.py  class_246.py  class_250.py  dicti_with_textbox.py  doctor.py~  example.py  index.html  logmein.py  main.js  matrix.py  project_242.py  project_245.py  pyproject.toml  speech.py  speed.py  taskmanger.py  time_zones.py  tskmgr.py
ADV-C160-Student/: practice_activity.py  text_editor.py
ADV-C196-Student/: C196-student.ipynb
ADV-C197-Project-Student/: C197-project-student.ipynb
ADV-C197-Student/: C197-Student.ipynb
ADV-C199-Student/: C199-student.ipynb
ADV-C200-Student/: C200-student.ipynb
ADV-Project-C158/: credit_card_authentication.py
ADV-Project-C159/: country_flags.py
ADV-Project-C196/: C196-student-project.ipynb  COVID-19 Healthy Diet Dataset.csv
ADV-Project_C199/: C199-project-student.ipynb
C198-Student/: C198-student.ipynb
C198-student-project/: C198-project-student.ipynb
C200-project-student/: C200-student-project.ipynb
C201-Student/: C201-Student.ipynb
Connecting_jobs/: C173_template_students.py
HTML-IDE/: HTML-IDE.py  index.html
Photo_viewer/: Photo_view.py
Planet/: planet.py
Pokemon_game/: Pokemon_game_window.py
canvas/: gollow.txt  main.py
class_231/: main.py
class_232/: main.py
class_233/: radar_data_handling.py  student.py  student_promoted.csv
class_234/: THE_CSV.csv  THE_CSV.pkl  main.py  next.py
(+38 files in other folders)
