[tool.poetry]
name = "python-projects-1"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^9.2.0"
matplotlib = "^3.6.1"
Pillow-PIL = "^0.1dev"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
